infra/kubernetes/overlays/local/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api-obs
  labels:
    app.kubernetes.io/part-of: api-obs
